--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,19 @@
 }
 
 img{
-	position: absolute;
 	left: 25%;
 	border-radius: 20px;
+}
+
+.day{
+	display: none;
+}
+.item{
+	margin-left: 5px;
+	text-align: center;
+	background-color: #5b5b5b0e;
+	border-radius: 20px;
+}
+.time{
+	margin: 10px;
 }
